Fix some glitches in embedded
Fix typo in debug
Add /files handler support (but Upload)

--- a/embedded/src/index.html
+++ b/embedded/src/index.html
@@ -18,7 +18,7 @@
         <li id="FWLink">Firmware</li>
         <li id="UiLink">Interface</li>
         <li id="hlpLink">Help</li>
-        <li id="espLink" class="hide">ESP3D</li>
+        <li id="espLink" class="hide">WebUI</li>
         <li class="menuspacer"></li>
         <li id="loginLink" class="hide">Login</li>
         <li id="verLink" disabled></li>
